editing homepage text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Front-End Development Internship Tasks at Cognifyz Technologies</h1>
+      <h1>Front-End Development Internship Tasks</h1>
       <div class="MainPage">
         <ul>
           <li class="list-task">
